# crawweb

./: README.md  server_monitor_tool.py
ssh_server_monitor_crew/: .env  .gitignore  README.md  pyproject-old.toml  pyproject.toml  server_status_report.md  servers.xlsx
ssh_server_monitor_crew/src/ssh_server_monitor_crew/: crew.py  main.py  server_status_report.md
ssh_server_monitor_crew/src/ssh_server_monitor_crew/config/: agents.yaml  tasks.yaml
ssh_server_monitor_crew/src/ssh_server_monitor_crew/tools/: server_monitor_tool.py
